syntax = "proto3";

package common.v1;

option go_package = "github.com/dfg007star/go_rocket/shared/pkg/proto/common/v1;common_v1";

// NotificationMethod канал связи
message NotificationMethod {
  string provider_name = 1;  // например, telegram, email, push)
  string target = 2;         // email, ID telegram и т.д.
}

// UserInfo информация о пользователе
message UserInfo {
  string user_uuid = 1;
  string login = 2;
  string email = 3;
}
